# Sophomore_C_MIPS_Logism

labs/01/: a.out  cgdb.txt  eccentric.c  hello  ll_cycle  ll_cycle.c  ll_equal
labs/01/hello.dSYM/Contents/Resources/DWARF/: hello
labs/01/ll_cycle.dSYM/Contents/Resources/DWARF/: ll_cycle
labs/01/ll_equal.dSYM/Contents/Resources/DWARF/: ll_equal
labs/02/: a.out  bit_ops  bit_ops.c  lfsr  lfsr.c  vector-test  vector.c
labs/02/bit_ops.dSYM/Contents/Resources/DWARF/: bit_ops
labs/02/lfsr.dSYM/Contents/Resources/DWARF/: lfsr
labs/03/: answers.txt  listmanips.s  nchoosek.s
labs/04/: FSM.circ  addMachine.circ  exer_1.circ
labs/05/: Ex1.circ  Ex2.circ  answers.txt  lab5ALU.circ
labs/06/: pipeline.circ
labs/07/: answer.txt  cache.s  matrixMultiply  transpose  transpose.c
labs/07/matrixMultiply.dSYM/Contents/Resources/DWARF/: matrixMultiply
labs/07/transpose.dSYM/Contents/Resources/DWARF/: transpose
labs/09/: answers.txt  sseTest.s  sum  sum.c  test.c
labs/10/: dotp.c  v_add.c
labs/11/: Makefile  answers.txt  dead_souls.txt  docwordcount.py  hadoopPath.sh  index.py  wordcount.py
proj1/: CMakeLists.txt  hashtable.c  philspel  philspel.c  philspel.h  sampleDictionary  sampleInput  testOutput
proj2/: CMakeLists.txt  assembler
proj2/assembler.dSYM/Contents/Resources/DWARF/: assembler
proj2/linker-src/: linker.s  linker_utils.s  string.s  symbol_list.s
proj2/linker-tests/: test_string.s  test_symbol_list.s
proj2/test-assembler.dSYM/Contents/Resources/DWARF/: test-assembler
proj3/: TEST_LOG_SINGLE_CYCLE
proj3/res-3-1/: TESTING_INSRUCTIONS
proj3/tests/pipelined/: cpu.circ  regfile.circ
proj3/tests/single-cycle/: alu.circ  cpu.circ
proj4/: CMakeLists.txt  answers.txt  grading.txt
proj4/src/: cnn.c
